syntax = "proto2";

import "lib/common.proto";

message SmakyDecoderProto {}

